# OOP_COURSE

./: .gitignore  .gitmodules  README.md
task-1/: CMakeLists.txt  README.md
task-1-serialize/: CMakeLists.txt  README.md
task-1-serialize/example_of_use/: CMakeLists.txt
task-1-serialize/example_of_use/src/: main.cpp  serialize_concepts.hpp  serialize_sfinae.hpp
task-1-serialize/src/: serialize.hpp  test_associative_containers.cpp
task-1-serialize/tests/: CMakeLists.txt
task-1-serialize/tests/src/: serialize_sfinae.hpp  test_forward_list.cpp  test_my_vector.cpp  test_string.cpp
task-1/__task__name__/: CMakeLists.txt
task-1/example_of_use/: CMakeLists.txt
task-1/example_of_use/src/: main.cpp
task-1/serialize_deserialize/: CMakeLists.txt
task-1/serialize_deserialize/includes/: my_vector.hpp  serialize.hpp  serialize_concepts.hpp  serialize_sfinae.hpp
task-1/serialize_deserialize/src/: serialize.cpp
task-1/tests/: CMakeLists.txt
task-1/tests/src/: get_template_name.hpp  main.cpp  my_vector.hpp  my_vector_double_free.hpp  serialize_concepts.hpp  serialize_sfinae.hpp  test_associative_containers.cpp  test_forward_list.cpp  test_my_vector.cpp  test_simple_types.cpp  test_string.cpp  test_vector.cpp
task-1/tests/src/test_concept_version/: test_associative_containers.cpp  test_forward_list.cpp  test_my_vector.cpp  test_simple_types.cpp  test_string.cpp  test_vector.cpp
task-2/: CMakeLists.txt
task-2-filter-iterator/: CMakeLists.txt  README.md
task-2-filter-iterator/src/: filter_iterator.hpp  filter_test.cpp
task-2-filter-iterator/tests/src/: filter_iterator_sfinae.hpp
task-2/filter_iterator/: CMakeLists.txt
task-2/filter_iterator/includes/: filter_iterator.hpp
task-2/tests/: CMakeLists.txt
task-2/tests/src/: filter_iterator.hpp  filter_iterator_concepts.hpp  filter_iterator_sfinae.hpp  filter_iterator_test.cpp  filter_test.cpp  iterator_test.cpp  iterator_view_test.cpp  main.cpp  range_test.cpp
task-3/: CMakeLists.txt
task-3-prefix-tree/: CMakeLists.txt  README.md
task-3-prefix-tree/tests/: test_trie_vertex.cpp
task-3/tests/: test_trie_vertex.cpp
task-3/trie/: trie.hpp
task-4/: CMakeLists.txt  README.md
task-4-custom-shared-pointer/: CMakeLists.txt  README.md
task-4-custom-shared-pointer/src/: shared_pointer.hpp
task-4/src/: shared_pointer.hpp  test_shared_pointer.cpp
task-5/: CMakeLists.txt  README.md
task-5-cryptography-and-strategy-pattern/: README.md
task-5-cryptography-and-strategy-pattern/src/: cryptography.hpp  cryptography_test.cpp
task-5/src/: block_cipher.hpp  cbc.cpp  coder.hpp  cryptography_test.cpp  ecb.cpp  mode.hpp  serialize_sfinae.hpp  tests.cpp  trie.hpp  xor_cipher.cpp
task-6-multithreading-image-fifo/: CMakeLists.txt  README.md
task-6-multithreading-image-fifo/src/: imageFIFO.hpp
task-6/src/: _test_main.cpp  imageFIFO_tests.cpp
